// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly 1`] = `
<div
  style={
    Object {
      "display": "flex",
      "flexDirection": "column",
      "marginLeft": "200px",
      "marginRight": "200px",
    }
  }
>
  <h1>
    Recommended For You
  </h1>
  <h5>
    Here is our personalized recommendation for new beer styles!
  </h5>
  <div
    style={
      Object {
        "backgroundColor": "rgb(244, 244, 244)",
        "display": "flex",
        "flex": 1,
        "justifyContent": "center",
      }
    }
  >
    <form
      className=""
      style={
        Object {
          "justifyContent": "center",
        }
      }
    >
      <div
        className="form-row"
      >
        <img
          alt="Lock"
          src="lock.png"
          style={
            Object {
              "alignItems": "center",
              "height": "300px",
              "marginBottom": "30px",
              "marginLeft": "50px",
              "marginTop": "50px",
              "width": "300px",
            }
          }
        />
      </div>
      <div
        className="form-row"
      >
        <label
          className="form-label"
        >
          In order to view recommended, please
        </label>
        <a
          href="/account-entry"
          id="go-to-create-account-link"
          onClick={[Function]}
          style={
            Object {
              "color": "blue",
              "marginLeft": "5px",
            }
          }
        >
          create or sign into an account.
        </a>
      </div>
    </form>
  </div>
</div>
`;

exports[`renders correctly with a user 1`] = `
<div
  style={
    Object {
      "display": "flex",
      "flexDirection": "column",
      "marginLeft": "200px",
      "marginRight": "200px",
    }
  }
>
  <h1>
    Recommended For You
  </h1>
  <h5>
    Here is our personalized recommendation for new beer styles!
  </h5>
  <div
    style={
      Object {
        "display": "flex",
        "flexDirection": "row",
        "marginTop": "50px",
      }
    }
  />
</div>
`;

exports[`renders correctly with fromExplore prop 1`] = `
<div
  style={
    Object {
      "display": "flex",
      "flexDirection": "column",
      "marginLeft": "200px",
      "marginRight": "200px",
    }
  }
>
  <h1>
    Recommended For You
  </h1>
  <h5>
    true
  </h5>
  <div
    style={
      Object {
        "display": "flex",
        "flexDirection": "row",
        "marginTop": "50px",
      }
    }
  >
    <div
      style={
        Object {
          "display": "flex",
          "flexDirection": "column",
          "justifyContent": "space-around",
          "marginLeft": "100px",
          "marginRight": "40px",
          "paddingBottom": "20px",
        }
      }
    >
      <a
        href="/search-result"
        id="clickable-beer"
        onClick={[Function]}
      >
        <p />
      </a>
    </div>
  </div>
</div>
`;

exports[`renders correctly with noRecs prop 1`] = `
<div
  style={
    Object {
      "display": "flex",
      "flexDirection": "column",
      "marginLeft": "200px",
      "marginRight": "200px",
    }
  }
>
  <h1>
    Recommended For You
  </h1>
  <h5>
    Here is our personalized recommendation for new beer styles!
  </h5>
  <div
    style={
      Object {
        "display": "flex",
        "flexDirection": "row",
        "marginTop": "50px",
      }
    }
  >
    You must rate at least 1 beer before we are able to recommend you any!
  </div>
</div>
`;
